Ingress/ingress-rules1-multi-host.yml
# create ingress with multiple host rules

---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-resource-1
spec:
  ingressClassName: nginx
  rules:
    - host: javawebapp1.ashokit.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: javawebappsvc
                port:
                  number: 80
    - host: mavenwebapp2.ashokit.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mavenwebappsvc
                port:
                  number: 80
...
