Ingress/ingress-rules2-routes.yml
# creating ingress rules for routing based on paths

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
spec:
  ingressClassName: nginx
  rules:
    - host: ashokit.org
      http:
        paths:
          - path: /java
            pathType: Prefix
            backend:
              service:
                name: javawebapp
                port:
                  number: 80
          - path: /maven
            pathType: Prefix
            backend:
              service:
                name: mavenwebapp
                port:
                  number: 80
...
